tests/paczka2/big_fuzzy/22960089.err
Error in line 3: xTx1t S180 0,0
Error in line 10: hRpzDT1WWH S820 85,9
Error in line 4: CAR A538 59,4
Error in line 19: hRpzDT1WWH A538 15,2
Error in line 7: xTx1t S904 51,6
Error in line 9: kAbE3okJW S180 37,9
Error in line 26: kAbE3okJW S820 51,0
Error in line 36: hRpzDT1WWH S820 33,90
Error in line 31: CAR S904 79,0
Error in line 24: xTx1t A538 85,7
Error in line 39: xTx1t S820 6,9
Error in line 44: IMfpHzD0EKs S904 10,1
Error in line 53: kAbE3okJW S820 75,4
Error in line 51: A538 S180 63,2
Error in line 23: hRpzDT1WWH S820 22,3
Error in line 74: kAbE3okJW A538 31,2
Error in line 71: NqhI S820 22,9
Error in line 83: CAR S180 65,1
Error in line 97: IMfpHzD0EKs S180 0,9
Error in line 87: NqhI S904 57,4
Error in line 89: A538 A538 72,0
Error in line 102: A538 S820 65,0
Error in line 108: A538 S904 25,9
Error in line 115: NqhI S180 C3,9
Error in line 121: A538 S820 89,6
Error in line 135: A538 S180 511,2
Error in line 109: NqhI S180 24,7
Error in line 143: IMfpHzD0EKs S904 37,8
Error in line 141: A538 S904 22,4
Error in line 142: NqhI A538 24,2
Error in line 145: A538 S820 67,1
Error in line 157: kAbE3okJW A538 26,23
Error in line 160: kAbE3okJW A538 32,6
Error in line 161: CAR S180 80,1
Error in line 149: NqhI S180 52,8
Error in line 170: NqhI S180 9,7
Error in line 175: NqhI S904 80,2
Error in line 171: xTx1t A538 80,7
Error in line 177: CAR S904 13,3
Error in line 185: CAR S180 31,3
Error in line 186: CAR S904 88,2
Error in line 198: xTx1t S904 19,0
Error in line 203: xTx1t A538 82,0
Error in line 202: A538 S820 12,0
Error in line 201: IMfpHzD0EKs S904 59,0
Error in line 209: IMfpHzD0EKs A538 71,1
Error in line 216: IMfpHzD0EKs SU04 1U7,5
Error in line 213: CAR S820 79,3
Error in line 231: hRpzDT1WWH S826 94,2
Error in line 225: CAR A538 23,4
Error in line 217: xTx1t A538 207,8
Error in line 232: hRpzDT1WWH S820 18,8
Error in line 236: NqhI S904 33,7
